# dnswait

./: README.md  dnswait.py  setup.cfg
