[metadata]
name = dnswait
version = attr: dnswait.__version__
description = attr: dnswait.__doc__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/JulienPalard/dnswait
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License

[options]
py_modules = dnswait
python_requires = >= 3.6
install_requires =
  dnspython

[options.entry_points]
console_scripts = dnswait=dnswait:main
